frontend: fix z-index problem in hero

--- a/frontend/components/Header/_Hero.scss
+++ b/frontend/components/Header/_Hero.scss
@@ -4,7 +4,7 @@
   // animation: fade-in 2s 1s forwards;
   // opacity: 0;
   background-color: $grey;
-  z-index: -1;
+  // z-index: -1;
   position: relative;
 
   .content-container {
