--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -38,6 +38,12 @@ ul {
   list-style: none;
 }
 
+main, footer {
+  // need this to come above hero
+  z-index: 1;
+  position: relative;
+}
+
 section {
   @include py(15);
 
@@ -53,3 +59,4 @@ section {
     text-align: center;
   }
 }
+
